# superbrain

./: .env.example  .gitignore  README.md  README.zh.md  draft.md  pyproject.toml
backend/: cli.py  config.py  context_manager.py  conversation_titles.py  export.py  main.py  memory.py  mentors.py  models.py  researcher.py  search.py
backend/orchestrator/: chat_router.py  deep_review.py
backend/providers/: base.py  openai_compat.py
config/mentors/: abbeel.md  brooks.md  feifei.md  hinton.md  huang.md  kaiming.md  karem.md  mccarthy.md
docs/superpowers/plans/: 2026-06-22-superbrain.md
docs/superpowers/specs/: 2026-06-22-superbrain-design.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.test.ts  App.tsx  api.test.ts  api.ts  bubbles.ts  index.css  insights.test.ts  insights.ts  panels.test.ts  panels.ts
frontend/src/components/: ChatProgress.test.tsx  ChatProgress.tsx  ChatStream.test.tsx  ChatStream.tsx  Composer.test.tsx  Composer.tsx  MarkdownSnippet.tsx  MentorRoster.tsx  Sidebar.test.tsx  Sidebar.tsx  Toast.test.tsx  Toast.tsx
tests/: conftest.py  test_api.py  test_chat_router.py  test_cli.py  test_config.py  test_context_manager.py  test_conversation_titles.py  test_deep_review.py  test_export.py  test_memory.py  test_mentors.py  test_models.py  test_provider.py  test_researcher.py  test_smoke_gateway.py
tests/fixtures/mentors/: alice.md  bob.md
