[project]
name = "superbrain"
version = "0.1.0"
description = "AI × 无人机 × 具身智能研究委员会 — multi-agent 头脑风暴系统"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "sse-starlette",
    "openai",
    "pydantic",
    "pydantic-settings>=2",
    "pyyaml",
    "python-frontmatter",
    "python-dotenv",
    "httpx",
]

[project.scripts]
superbrain = "backend.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
markers = ["smoke: 需真实网络的冒烟测试，默认跳过"]
addopts = "-m 'not smoke'"
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
